# ai-codebase-engineer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: dependencies.py  graph.py  query.py  repos.py
app/core/: ast_parser.py  cache.py  chunker.py  embedding_service.py  evaluator.py  file_scanner.py  graph_builder.py  indexer.py  rag_engine.py  repo_loader.py  retriever.py  vector_store.py
app/models/: db.py  schemas.py
app/prompts/: answer_question.txt
data/: app.db
data/indexes/chroma/: chroma.sqlite3
frontend/: streamlit_app.py
scripts/: check_embeddings.py  index_repo.py  run_eval.py
tests/: test_api.py  test_ast_parser.py  test_cache.py  test_chunker.py  test_db.py  test_embedding_service.py  test_evaluator.py  test_file_scanner.py  test_graph_builder.py  test_index_repo.py  test_rag_engine.py  test_retriever.py  test_run_eval.py  test_streamlit_app.py  test_vector_store.py
